[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i3-groups"
version = "0.0.1"
description = "Manage i3wm workspaces and groups"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "MihailoIsakov", email = "isakov.m@gmail.com" },
]
keywords = ["i3", "i3wm", "extensions", "add-ons"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "i3-py~=0.6.4",
]

[project.optional-dependencies]
dev = ["pytest~=7.1"]

[project.urls]
Homepage = "https://github.com/MihailoIsakov/i3-groups"

[project.scripts]
rename-workspace = "i3_groups.commands:rename_workspace"
move-ws-to-group = "i3_groups.commands:move_workspace_to_group"
next-ws-in-group = "i3_groups.commands:goto_next_workspace_in_group"
move-container-to-ws = "i3_groups.commands:move_container_to_workspace"
change-active-group = "i3_groups.commands:change_group"
make-workspace = "i3_groups.commands:new_workspace"
i3-groups-polybar = "i3_groups.commands:polybar"
